--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -5,7 +5,7 @@
         <div class="col-sm-8 col-md-7 py-4">
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white"><%= link_to 'About', pages_about_path, class: "text-white" %></h4>
+          <h4 class="text-white"><%= link_to 'About', about_path, class: "text-white" %></h4>
           <h4 class="text-white">Contact</h4>
           <ul class="list-unstyled">
             <li><a href="#" class="text-white">Follow on Twitter</a></li>
@@ -19,7 +19,7 @@
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
 
-        <%= link_to pages_homepage_path, :class => "text-white navbar-brand d-flex align-items-center" do %>
+        <%= link_to root_path, :class => "text-white navbar-brand d-flex align-items-center" do %>
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
             <strong>Alpha-Blog</strong>
         <% end %>
