update articles is working

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,11 @@
+<%= render "pages/header" %>
+
 <h1>Your new article</h1>
 <p>
-Title: <%= @article.title %>
+    Title: <%= @article.title %>
 </p>
 <p>
-Description: <%= @article.description %>
+    Description: <%= @article.description %>
 </p>
+
+<%= render "pages/footer" %>
