add flash partial and destroy article action

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,10 +4,14 @@
 
     <section class="jumbotron text-center">
         <div class="container">
-        <h1 class="jumbotron-heading">Homepage</h1>
+        <h1 class="jumbotron-heading">Articles</h1>
         <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
         <p>
-            <a href="#" class="btn btn-primary my-2">Main call to action</a>
+            <%= link_to new_article_path do %>
+                <button type="button" class="btn btn-primary my-2">
+                    Create Article
+                </button>
+            <% end %>
             <a href="#" class="btn btn-secondary my-2">Secondary action</a>
         </p>
         </div>
@@ -33,6 +37,10 @@
 
                                         <%= link_to edit_article_path(article) do %>
                                         <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <% end %>
+
+                                        <%= link_to article_path(article), method: :delete, data: {confirm: "Are you sure?"} do %>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                                         <% end %>
                                     </div>
                                     
