--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -6,6 +6,7 @@
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white"><%= link_to 'About', about_path, class: "text-white" %></h4>
+          <h4 class="text-white"><%= link_to 'Articles', articles_path, class: "text-white" %></h4>
           <h4 class="text-white">Contact</h4>
           <ul class="list-unstyled">
             <li><a href="#" class="text-white">Follow on Twitter</a></li>
