add active navbar link class

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,10 +12,6 @@
  *
  */
 
-@import "bootstrap";
+@import "custom";
 
-.card-img-top {
-  width: 100%;
-  height: 15vw;
-  object-fit: cover;
-}
+@import "bootstrap";
