--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,20 +1,4 @@
 <main role="main">
-
-    <section class="jumbotron text-center">
-        <div class="container">
-        <h1 class="jumbotron-heading">Articles</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-        <p>
-            <%= link_to new_article_path do %>
-                <button type="button" class="btn btn-primary my-2">
-                    Create Article
-                </button>
-            <% end %>
-            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-        </p>
-        </div>
-    </section>
-
     <div class="album py-5 bg-light">
         <div class="container">
             <div class="row">
@@ -42,7 +26,7 @@
                                         <% end %>
                                     </div>
                                     
-                                    <small class="text-muted">9 mins</small>
+                                    <small class="text-muted"><%= time_ago_in_words(article.created_at) %></small>
                                 </div>
                             </div>
                         </div>
