add background image, and favicon

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,8 @@
     <p class="float-right">
       <a href="#">Back to top</a>
     </p>
-    <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
+    <small>
+    <p>&copy Alpha Blog | Created by Christopher Grabski | 2018</p>
+    </small>
   </div>
 </footer>
