--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,9 +1,17 @@
-$navbar-default-bg: #aaaaaa;
-
 .card-img-top {
   width: 100%;
   height: 15vw;
   object-fit: cover;
+}
+
+.jumbotron {
+  background-image: asset-url("alpha-blog-background.png");
+  background-size: cover;
+}
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
 }
 
 @import "bootstrap";
