--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,17 +1,16 @@
 <main role="main">
-
   <section class="jumbotron text-center">
       <div class="container">
-      <h1 class="jumbotron-heading">Alpha Blog Home</h1>
-      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-      <p>
-          <%= link_to new_article_path do %>
-              <button type="button" class="btn btn-primary my-2">
-                  Create Article
-              </button>
-          <% end %>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-      </p>
+        <h1 class="jumbotron-heading text-white">Alpha Blog Home</h1>
+        <p class="lead text-light">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+        <p>
+            <%= link_to new_article_path do %>
+                <button type="button" class="btn btn-primary my-2">
+                    Create Article
+                </button>
+            <% end %>
+            <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+        </p>
       </div>
   </section>
 </main>
