add form as partial, fixed-position navbar

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,4 +10,6 @@
     <p class="lead">
         <%= @article.description %>
     </p>
+    <%= link_to "Return to articles", articles_path %>
+
 </main>
