--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,30 +1,6 @@
-<% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved.</h2>
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
-<% end %>
-
-<div class="container">
-  <div class="py-5 text-center">
-  <h2>Create</h2>
-  <p class="lead">Post your own article</p>
+<div class="py-5 text-center">
+    <h2>Create</h2>
+    <p class="lead">Post your own article</p>
 </div>
 
-<%= form_for @article, html: {class: "needs-validation"} do |f| %>
-  <div class="row">
-        <div class="col-md-6 mb-3">
-            <p>
-                <%= f.label :title %><br/>
-                <%= f.text_field :title, :class => "form-control" %><br/>
-            </p>
-            <p>
-                <%= f.label :description %><br/>
-                <%= f.text_area :description, :class => "form-control" %>
-            </p>
-            <%= f.submit "Create", :class => "btn btn-primary btn-lg btn-block" %>
-        </div>
-    </div>
-<% end %>
+<%= render 'form' %>
