--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <%= render 'layouts/navbar' %>
     <%= render 'layouts/messages' %>
-    <%= yield %>
+    <div class="container"> 
+      <%= yield %>
+    </div>
     <%= render 'layouts/footer' %>
   </body>
 </html>
