--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,34 +7,25 @@
     </ul>
 <% end %>
 
-<div class="row">
-    <div class="col-sm-9 offset-3">
-        <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
-            <div class="form-group">
-                <div class="control-label col-sm-2">
-                    <%= f.label :title %>
-                </div>
-                <div class="col-sm-8">
-                    <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="control-label col-sm-2">
-                    <%= f.label :description %>
-                </div>
-                <div class="col-sm-8">
-                    <%= f.text_area :description, :class => "form-control", placeholder: "Body of article", rows: 10 %>
-                </div>
-                <div class="form-group">
-                    <div class=" col-sm-8">
-                        <br/>
-                        <%= f.submit "Create", :class => "btn btn-primary btn-lg btn-block" %>
-                    </div>
-                </div>
-            </div>
-        <% end %>
+<%= form_for(@article, :html => {role: "form"}) do |f| %>
+    <div class="form-group row">
+        <div class="col-sm-2">
+            <%= f.label :title, class: "col-form-label"%>
+        </div>
+        <div class="col-sm-10">
+            <%= f.text_field :title, class: "form-control", id: "articleTitle", placeholder: "Title of article", autofocus: true %>
+        </div>
     </div>
-    <div class="col-xs-4 offset-5">
-        [ <%= link_to "Cancel request and return to articles", articles_path %> ]
+    <div class="form-group row">
+        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+            <%= f.text_area :description, class: "form-control", id:"articleBody", placeholder: "Body of article", rows: 10 %>
+        </div>
     </div>
-</div>
+    <div class="form-group row">
+        <div class="col-sm-10 offset-2">
+            <%= f.submit "Submit", :class => "btn btn-primary btn-lg " %>
+            <%= link_to "Cancel", articles_path, :class => "btn btn-secondary btn-lg " %>
+        </div>
+    </div>
+<% end %>
