--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="py-5 text-center">
-<h2>Edit an existing article</h2>
+    <h2>Edit an existing article</h2>
+</div>
 
 <%= render 'form' %>
