--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,10 +1,24 @@
 <% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved.</h2>
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
+    <div class="row">
+        <div class="col-sm-10 offset-2">
+            <div class="card text-danger border-danger mb-3 col-xs-12">
+                <div class="card-header">Error</div>
+                <div class="card-body">
+                    <h2 class="card-title">
+                        <%= pluralize(@article.errors.count, "error") %>
+                        prevented this article from being saved:
+                    </h2>
+                    <div class="card-text">
+                        <ul>
+                            <% @article.errors.full_messages.each do |msg| %>
+                                <li><%= msg %></li>
+                            <% end %>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 <% end %>
 
 <%= form_for(@article, :html => {role: "form"}) do |f| %>
