--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,31 +1,19 @@
-<main role="main">
-    <div class="album py-5 bg-light">
-        <div class="container">
-            <div class="row">
-                <% @articles.each do |article| %>
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            <%= image_tag(article.image, :alt => "rss feed", :class => "card-img-top")%>
-                            <div class="card-body">
-                            <p><%= article.title %></p>
-                            <p class="card-text"><%= article.description %></p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-
-                                        <%= link_to "Show", article_path(article), class: "btn btn-sm btn-outline-secondary" %>
-
-                                        <%= link_to "Edit", edit_article_path(article), class: "btn btn-sm btn-outline-secondary" %>
-
-                                        <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-outline-secondary" %>
-                                    </div>
-                                    
-                                    <small class="text-muted"><%= time_ago_in_words(article.created_at) %></small>
-                                </div>
-                            </div>
-                        </div>
+<div class="card-columns">
+    <% @articles.each do |article| %>
+        <div class="card">
+            <%= image_tag(article.image, :alt => "article image", :class => "card-img-top")%>
+            <div class="card-body">
+                <h5 class="card-title"><%= article.title %></h5>
+                <p class="card-text"><%= article.description %></p>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                        <%= link_to "Show", article_path(article), class: "btn btn-sm btn-outline-secondary" %>
+                        <%= link_to "Edit", edit_article_path(article), class: "btn btn-sm btn-outline-secondary" %>
+                        <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-outline-secondary" %>
                     </div>
-                <% end %>
+                    <small class="text-muted"><%= time_ago_in_words(article.created_at) %></small>
+                </div>
             </div>
         </div>
-    </div>
-</main>
+    <% end %>
+</div>
