--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,9 +7,9 @@
                 <p class="card-text"><%= article.description %></p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <%= link_to "Show", article_path(article), class: "btn btn-sm btn-outline-secondary" %>
+                        <%= link_to "Show", article_path(article), class: "btn btn-sm btn-outline-primary" %>
                         <%= link_to "Edit", edit_article_path(article), class: "btn btn-sm btn-outline-secondary" %>
-                        <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-outline-secondary" %>
+                        <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-outline-danger" %>
                     </div>
                     <small class="text-muted"><%= time_ago_in_words(article.created_at) %></small>
                 </div>
