--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
     <hr>
     <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-            <%= link_to "Edit", edit_article_path(@article), class: "btn btn-sm btn-outline-primary" %>
+            <%= link_to "Edit", edit_article_path(@article), class: "btn btn-sm btn-outline-secondary" %>
             <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-outline-danger" %>
         </div>
     </div>
