--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,8 +17,12 @@
     </div>
     <div class="form-group row">
         <div class="col-sm-10 offset-2">
-            <%= f.submit "Submit", :class => "btn btn-primary btn-lg " %>
-            <%= link_to "Cancel", articles_path, :class => "btn btn-secondary btn-lg " %>
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                    <%= f.submit "Submit", :class => "btn btn-outline-primary" %>
+                    <%= link_to "Cancel", articles_path, :class => "btn btn-outline-danger" %>
+                </div>
+            </div>
         </div>
     </div>
 <% end %>
