--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,13 +7,19 @@
                 <div class="card-body">
                     <h3 class="card-title"><%= article.title %></h3>
                     <hr>
+                    <div class="article-meta-details">
+                        <small class="text-muted">
+                            By: <%= article.user.username if article.user %>,
+                            <%= time_ago_in_words(article.created_at) %>, 
+                            last updated: <%= time_ago_in_words(article.created_at) %>
+                        </small>
+                    </div>
                     <p class="card-text"><%= article.description %></p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <%= link_to "Edit", edit_article_path(article), class: "btn btn-sm btn-outline-primary" %>
                             <%= link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-outline-danger" %>
                         </div>
-                        <small class="text-muted"><%= time_ago_in_words(article.created_at) %></small>
                     </div>
                 </div>
             </div>
