--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,15 +2,22 @@
   <%= image_tag(@article.image, :alt => "article image", :class => "card-img-top")%>
   <div class="card-body">
     <h1 class="card-title"><%= @article.title %></h1>
-    <hr>
     <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-sm btn-outline-primary" %>
             <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-outline-danger" %>
         </div>
     </div>
+    <hr>
+    <div class="article-meta-details">
+        <small class="text-muted">
+            By: <%= @article.user.username if @article.user %>,
+            <%= time_ago_in_words(@article.created_at) %> ago, 
+            last updated: <%= time_ago_in_words(@article.created_at) %> ago
+        </small>
+    </div>
+    
     <p class="card-text"><%= simple_format(@article.description) %></p>
-    <p class="card-text"><small class="text-muted"><%= time_ago_in_words(@article.created_at) %> ago</small>
 </p>
   </div>
 </div>
