--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,7 +10,9 @@
         </div>
     </div>
     <div class="form-group row">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-2">
+            <%= f.label :description, class: "col-form-label"%>
+        </div>
         <div class="col-sm-10">
             <%= f.text_area :description, class: "form-control", id:"articleBody", placeholder: "Body of article", rows: 10 %>
         </div>
