--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,40 +1,3 @@
 <h1 align="center">Sign up for Alpha Blog</h1>
 
-<%= render 'shared/errors', obj: @user %>
-
-<%= form_for(@user, :html => {role: "form"}) do |f| %>
-    <div class="form-group row">
-        <div class="col-2">
-            <%= f.label :username, class: "col-form-label"%>
-        </div>
-        <div class="col-10">
-            <%= f.text_field :username, class: "form-control", id: "userName", placeholder: "username", autofocus: true %>
-        </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-2">
-            <%= f.label :email, class: "col-form-label"%>
-        </div>
-        <div class="col-10">
-            <%= f.email_field :email, class: "form-control", placeholder: "email" %>
-        </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-2">
-            <%= f.label :password, class: "col-form-label"%>
-        </div>
-        <div class="col-10">
-            <%= f.password_field :password, class: "form-control", placeholder: "password"%>
-        </div>
-    </div>
-    <div class="form-group row">
-        <div class="col-10 offset-2">
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                    <%= f.submit "Submit", :class => "btn btn-outline-primary" %>
-                    <%= link_to "Cancel", articles_path, :class => "btn btn-outline-danger" %>
-                </div>
-            </div>
-        </div>
-    </div>
-<% end %>
+<%= render 'form' %>
