--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,3 @@
-<h1 align="center">Articles List</h1>
+<h1 align="center">Articles</h1>
 
-<%= render 'article', obj: @articles %>
+<%= render 'articles', obj: @articles %>
