--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,19 @@
 <div class="card mb-3">
   <%= image_tag(@article.image, :alt => "article image", :class => "card-img-top")%>
   <div class="card-body">
-    <h1 class="card-title"><%= @article.title %></h1>
-    <div class="d-flex justify-content-between align-items-center">
-        <div class="btn-group">
-            <%= link_to "Edit", edit_article_path(@article), class: "btn btn-sm btn-outline-primary" %>
-            <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-outline-danger" %>
+    <div class=" d-flex align-items-center flex-column">
+        <h1 class="card-title"><%= @article.title %></h1>
+        <% if @article.user %>
+            <h4>Created by:</h4>
+            <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
+            <%= link_to @article.user.username, user_path(@article.user) %>
+            <small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></small>
+        <% end %>
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+                <%= link_to "Edit", edit_article_path(@article), class: "btn btn-sm btn-outline-primary" %>
+                <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-sm btn-outline-danger" %>
+            </div>
         </div>
     </div>
     <hr>
